--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta charset="UTF-8" />
     <html lang="fr">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content=" follow" />
+    <meta name="robots" content="follow" />
     <meta name="author" content="Carrelage petite sirène"/>
     <meta name="copyright" content="Petite sirène"/>
     <meta
@@ -60,9 +60,9 @@
       <footer>
           <div class="containerSocial">
             <ul class="socialContent">
-                <li>Facebook</li>
-                <li>Instagram</li>
-                <li>Youtube</li>
+                <a href="#"><li>Facebook</li></a>
+                <a href="#"><li>Instagram</li></a>
+                <a href="#"><li>Youtube</li></a>
             </ul>
             <span>CarrelageSirene | 2020 © Tous droits réservés</span>
           </div>
