--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       name="description"
       content="Carrelagepetitesirene est une entreprise réputée internationalement pour ses carrelages motifs petites sirènes complétement unique en leur genre !"
     />
-
+    <meta name="keywords" content="petite, sirène, petite sirène, carrelage, sol, mur, salle de bain, océan, décoration, meubles, intérieur, extérieur, carrelages, carreaux, original, motif, palais">
     <title>Carrelage petite sirène</title>
     <link rel="stylesheet" href="css/index.css">
   </head>
@@ -29,6 +29,14 @@
           <div class="containerLogo">
               <span class="logo">CarrelageSirene.</span>
           </div>
+          <h1 class="title">SireneTiles</h1>
+          <nav class="navbar">
+            <ul>
+              <a href="#"><li>Blog</li></a>
+              <a href="#"><li>About</li></a>
+              <a href="#"><li>Contact</li></a>
+            </ul>
+          </nav>
       </header>
       <main>
           <section class="sectionMain">
@@ -36,7 +44,7 @@
                 <img src="assets/petitesirene.jpeg" alt="Photo montrant la petite sirène du film">
             </div>
             <div class="contentSectionMain">
-                <h1>Carrelage petite sirène</h1>
+                <h2>Carrelage petite sirène</h2>
                 <h3>Des carrelages uniques</h3>
                 <p>
                     Les équipes de carrelagepetitesirene savent à quel point il est essentiel de répondre à la plus haute exigence de qualité dans chacun des projets qui nous sont soumis. Depuis notre création en 2000, notre expertise et notre connaissance du métier nous ont permis d'offrir à nos clients des solutions sur le long terme. Explorez notre site pour en savoir plus.
