--- a/index.html
+++ b/index.html
@@ -23,25 +23,44 @@
     <meta name="keywords" content="petite, sirène, petite sirène, carrelage, sol, mur, salle de bain, océan, décoration, meubles, intérieur, extérieur, carrelages, carreaux, original, motif, palais">
     <title>Carrelage petite sirène</title>
     <link rel="stylesheet" href="css/index.css">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Itim&display=swap" rel="stylesheet">
+
   </head>
   <body>
       <header>
-          <div class="containerLogo">
+        <nav class="navbar">
+          <span>SireneTiles </span>
+          <ul>
+            <a href="#"><li>Produits</li></a>
+            <a href="#"><li>About</li></a>
+            <a href="#"><li>Contact</li></a>
+          </ul>
+          
+        </nav>
+
+          <!-- <div class="containerLogo">
               <span class="logo">CarrelageSirene.</span>
+          </div> -->
+          <div class="containerHeader">
+            <h1 class="title">SireneTiles</h1>
+            <p>
+                Les équipes de carrelagepetitesirene savent à quel point il est essentiel de répondre à la plus haute exigence de qualité dans chacun des projets qui nous sont soumis. Depuis notre création en 2000, notre expertise et notre connaissance du métier nous ont permis d'offrir à nos clients des solutions sur le long terme. Explorez notre site pour en savoir plus.
+            </p>
+            <a href="">
+
+              <button>
+                Voir nos produits
+              </button>
+            </a>
           </div>
-          <h1 class="title">SireneTiles</h1>
-          <nav class="navbar">
-            <ul>
-              <a href="#"><li>Blog</li></a>
-              <a href="#"><li>About</li></a>
-              <a href="#"><li>Contact</li></a>
-            </ul>
-          </nav>
+
+        </section>
       </header>
       <main>
           <section class="sectionMain">
             <div class="containerImg">
-                <img src="assets/petitesirene.jpeg" alt="Photo montrant la petite sirène du film">
+                  <div class="overlayImg"></div>
+                <img src="assets/tiles01.jpg" alt="Photo montrant la petite sirène du film">
             </div>
             <div class="contentSectionMain">
                 <h2>Carrelage petite sirène</h2>
@@ -51,7 +70,70 @@
                 </p>
             </div>
           </section>
-          <section class="sectionLearnMore">
+          <section class="sectionProducts">
+            <div class="containerProducts">
+              <a href="#
+              ">
+              <div class="product">
+                <h4>Petit sirène une</h4>
+                <img src="assets/tiles01.jpg" alt="">
+              </div>
+            </a>
+
+            <a href="#">
+              <div class="product">
+                <h4>Petit sirène deux</h4>
+                <img src="assets/tiles02.jpg" alt="">
+              </div>
+            </a>
+
+            <a href="#">
+              <div class="product">
+                <h4>Petit sirène trois</h4>
+                <img src="assets/tiles03.jpeg" alt="">
+              </div>
+            </a>
+            </div>
+          </section>
+          <section class="sectionProducts">
+            <div class="containerProducts">
+              <a href="#
+              ">
+              <div class="product">
+                <h4>Petit sirène quatre</h4>
+                <img src="assets/tiles01.jpg" alt="">
+              </div>
+            </a>
+
+            <a href="#">
+              <div class="product">
+                <h4>Petit sirène cinq</h4>
+                <img src="assets/tiles02.jpg" alt="">
+              </div>
+            </a>
+
+            <a href="#">
+              <div class="product">
+                <h4>Petit sirène six</h4>
+                <img src="assets/tiles03.jpeg" alt="">
+              </div>
+            </a>
+            </div>
+          </section>
+
+          <div class="containerHeader">
+            <button>
+              Voir nos produits
+            </button>
+            <p>
+                Les équipes de carrelagepetitesirene savent à quel point il est essentiel de répondre à la plus haute exigence de qualité dans chacun des projets qui nous sont soumis. Depuis notre création en 2000, notre expertise et notre connaissance du métier nous ont permis d'offrir à nos clients des solutions sur le long terme. Explorez notre site pour en savoir plus.
+            </p>
+            <a href="">
+
+
+            </a>
+          </div>
+          <!-- <section class="sectionLearnMore">
             <div class="containerImg">
                 <img src="assets/petitesirene.jpeg" alt="Photo montrant la petite sirène du film">
             </div>
@@ -63,8 +145,9 @@
                 </p>
             </div>
             
-          </section>
+          </section> -->
       </main>
+
       <footer>
           <div class="containerSocial">
             <ul class="socialContent">
