--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
     <meta name="copyright" content="Petite sirène"/>
     <meta
       name="description"
-      content="Carrelagepetitesirene est une entreprise réputée internationalement pour ses carrelages motifs petites sirènes complétement unique en leur genre !"
+      content="Carrelagepetitesirene est une entreprise réputée internationalement pour ses carrelages motifs petites sirènes complétement uniques en leur genre !"
     />
-    <meta name="keywords" content="petite, sirène, petite sirène, carrelage, sol, mur, salle de bain, océan, décoration, meubles, intérieur, extérieur, carrelages, carreaux, original, motif, palais">
-    <title>Carrelage petite sirène</title>
+    <meta name="keywords" content="carrelage, original, petite sirène, petite, décoration, mur, salle de bain, océan, sol, meubles, intérieur, palais, carrelages, carreaux, sirène, motif, extérieur">
+    <title>SireneTiles</title>
     <link rel="stylesheet" href="css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Itim&display=swap" rel="stylesheet">
 
@@ -76,21 +76,21 @@
               ">
               <div class="product">
                 <h4>Petit sirène une</h4>
-                <img src="assets/tiles01.jpg" alt="">
+                <img src="assets/tiles01.jpg" alt="Image de carrelage petite sirène numéro 1">
               </div>
             </a>
 
             <a href="#">
               <div class="product">
                 <h4>Petit sirène deux</h4>
-                <img src="assets/tiles02.jpg" alt="">
+                <img src="assets/tiles02.jpg" alt="Image de carrelage petite sirène numéro 2">
               </div>
             </a>
 
             <a href="#">
               <div class="product">
                 <h4>Petit sirène trois</h4>
-                <img src="assets/tiles03.jpeg" alt="">
+                <img src="assets/tiles03.jpeg" alt="Image de carrelage petite sirène numéro 3">
               </div>
             </a>
             </div>
@@ -101,21 +101,21 @@
               ">
               <div class="product">
                 <h4>Petit sirène quatre</h4>
-                <img src="assets/tiles01.jpg" alt="">
+                <img src="assets/tiles01.jpg" alt="Image de carrelage petite sirène numéro 4">
               </div>
             </a>
 
             <a href="#">
               <div class="product">
                 <h4>Petit sirène cinq</h4>
-                <img src="assets/tiles02.jpg" alt="">
+                <img src="assets/tiles02.jpg" alt="Image de carrelage petite sirène numéro 5">
               </div>
             </a>
 
             <a href="#">
               <div class="product">
                 <h4>Petit sirène six</h4>
-                <img src="assets/tiles03.jpeg" alt="">
+                <img src="assets/tiles03.jpeg" alt="Image de carrelage petite sirène numéro 6">
               </div>
             </a>
             </div>
