--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
           <div class="containerHeader">
             <h1 class="title">SireneTiles</h1>
             <p>
-                Les équipes de carrelagepetitesirene savent à quel point il est essentiel de répondre à la plus haute exigence de qualité dans chacun des projets qui nous sont soumis. Depuis notre création en 2000, notre expertise et notre connaissance du métier nous ont permis d'offrir à nos clients des solutions sur le long terme. Explorez notre site pour en savoir plus.
-            </p>
+              Que ce soit pour une salle de bain, une cuisine, un séjour ou pour un couloir; le carrelage petite sirène ramène une touche de magie et de fantaisie dans votre intérieur. Par ses couleurs vives il illumine vos espaces et remémore à toute la famille des bons moments passés devant ce classique de Disney. Polyvalent, résistant et facile à entretenir, le carrelage habille tous les sols de la maison.             </p>
             <a href="">
 
               <button>
@@ -66,8 +65,7 @@
                 <h2>Carrelage petite sirène</h2>
                 <h3>Des carrelages uniques</h3>
                 <p>
-                    Les équipes de carrelagepetitesirene savent à quel point il est essentiel de répondre à la plus haute exigence de qualité dans chacun des projets qui nous sont soumis. Depuis notre création en 2000, notre expertise et notre connaissance du métier nous ont permis d'offrir à nos clients des solutions sur le long terme. Explorez notre site pour en savoir plus.
-                </p>
+                  Le carrelage petite sirène est un carrelage unique qui répond aux plus hauts standards de qualité. Antidérapant, durable et respectant les normes ISO, bénéficiez de nos 20 ans de savoir-faire pour le carrelage au travers de ce produit d’exception. De la préparation à la pose du carrelage, en passant par le nettoyage et l’entretien, nous serons là à chaque étape pour vous accompagner sur le long terme.                </p>
             </div>
           </section>
           <section class="sectionProducts">
@@ -126,8 +124,7 @@
               Voir nos produits
             </button>
             <p>
-                Les équipes de carrelagepetitesirene savent à quel point il est essentiel de répondre à la plus haute exigence de qualité dans chacun des projets qui nous sont soumis. Depuis notre création en 2000, notre expertise et notre connaissance du métier nous ont permis d'offrir à nos clients des solutions sur le long terme. Explorez notre site pour en savoir plus.
-            </p>
+              Tout droit sorti d’un des plus grands classiques de Disney, le carrelage petite sirène reprend la princesse Ariel dans sa pose iconique qui émerveillera petits et grands.            </p>
             <a href="">
 
 
