--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="copyright" content="Petite sirène"/>
     <meta
       name="description"
-      content="Carrelagepetitesirene est une entreprise réputée internationalement pour ses carrelages motifs petites sirènes complétement uniques en leur genre !"
+      content="Carrelagepetitesirene est une entreprise réputée nationalement pour ses carrelages motifs petite sirène complétement uniques en leur genre !"
     />
     <meta name="keywords" content="carrelage, original, petite sirène, petite, décoration, mur, salle de bain, océan, sol, meubles, intérieur, palais, carrelages, carreaux, sirène, motif, extérieur">
     <title>SireneTiles</title>
@@ -50,10 +50,10 @@
                 <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Produits</a>
+                <a class="nav-link" href="https://carrelagepetitesirene.store/product.html">Produits</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
+                <a class="nav-link" href="https://carrelagepetitesirene.store/contact.html">Contact</a>
               </li>
 
             </ul>
@@ -67,7 +67,7 @@
             <h1 class="display-1 title">SireneTiles</h1>
             <p>
               Que ce soit pour une salle de bain, une cuisine, un séjour ou pour un couloir; le carrelage petite sirène ramène une touche de magie et de fantaisie dans votre intérieur. Par ses couleurs vives il illumine vos espaces et remémore à toute la famille des bons moments passés devant ce classique de Disney. Polyvalent, résistant et facile à entretenir, le carrelage habille tous les sols de la maison.             </p>
-            <a href="">
+            <a href="https://carrelagepetitesirene.store/product.html">
 
               <button>
                 Voir nos produits
@@ -142,15 +142,14 @@
           </section> -->
 
           <div class="containerHeader">
-            <button>
-              Voir nos produits
-            </button>
+            <a href="https://carrelagepetitesirene.store/product.html">
+
+              <button>
+                Voir nos produits
+              </button>
+            </a>
             <p>
               Tout droit sorti d’un des plus grands classiques de Disney, le carrelage petite sirène reprend la princesse Ariel dans sa pose iconique qui émerveillera petits et grands.            </p>
-            <a href="">
-
-
-            </a>
           </div>
           <!-- <section class="sectionLearnMore">
             <div class="containerImg">
@@ -170,9 +169,9 @@
       <footer>
           <div class="containerSocial">
             <ul class="socialContent">
-                <a href="#"><li>Facebook</li></a>
-                <a href="#"><li>Instagram</li></a>
-                <a href="#"><li>Youtube</li></a>
+                <a href="https://www.facebook.com/"><li>Facebook</li></a>
+                <a href="https://www.instagram.com/mariofyl/"><li>Instagram</li></a>
+                <a href="https://www.youtube.com/"><li>Youtube</li></a>
             </ul>
             <span>CarrelageSirene | 2020 © Tous droits réservés</span>
           </div>
