--- a/product.html
+++ b/product.html
@@ -3,11 +3,97 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <html lang="fr">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="robots" content="follow" />
+    <meta name="author" content="Carrelage petite sirène"/>
+    <meta name="copyright" content="Petite sirène"/>
+    <meta
+      name="description"
+      content="Carrelagepetitesirene est une entreprise réputée nationalement pour ses carrelages motifs petite sirène complétement uniques en leur genre !"
+    />
+    <meta name="keywords" content="carrelage, original, petite sirène, petite, décoration, mur, salle de bain, océan, sol, meubles, intérieur, palais, carrelages, carreaux, sirène, motif, extérieur">
+    <link rel="stylesheet" href="css/product.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Itim&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+      integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
+      crossorigin="anonymous"
+    />
+    <title>Produits</title>
   </head>
   <body>
-    <header></header>
-    <main>Produits !</main>
-    <footer></footer>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="#">SireneTiles</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://carrelagepetitesirene.store/product.html">Nos produits</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="mainContent">
+        <h1>Nos licences</h1>
+        <p>
+          Choisis pour être intemporelles et pour se fondre au mieux dans vos intérieurs; nos licences vous rappelerons vos plus beaux souvenirs d’enfance et seront pour vous l’occasion de créer de nouvelles références pour vos enfants.
+        </p>
+      </div>
+      <div class="bigContainerCard">
+        <div class="card sirene">
+          <div class="mask"></div>
+          <div class="containerText">
+            <h3>Petite sirène</h3>
+            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licensesirene.html">
+              Voir nos produits
+            </a></button>
+          </div>
+        </div>
+
+        <div class="card mickey">
+          <div class="mask"></div>
+          <div class="containerText">
+            <h3>Mickey mouse</h3>
+            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licensemickey.html">
+              Voir nos produits
+            </a></button>
+          </div>
+        </div>
+
+        <div class="card lion">
+          <div class="mask"></div>
+          <div class="containerText">
+            <h3>Le roi lion</h3>
+            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licenselion.html">
+              Voir nos produits
+            </a></button>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <div class="containerSocial">
+        <ul class="socialContent">
+            <a href="https://www.facebook.com/"><li>Facebook</li></a>
+            <a href="https://www.instagram.com/mariofyl/"><li>Instagram</li></a>
+            <a href="https://www.youtube.com/"><li>Youtube</li></a>
+        </ul>
+        <span>CarrelageSirene | 2020 © Tous droits réservés</span>
+      </div>
+    </footer>
   </body>
 </html>
