--- a/product.html
+++ b/product.html
@@ -58,7 +58,7 @@
           <div class="mask"></div>
           <div class="containerText">
             <h3>Petite sirène</h3>
-            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licensesirene.html">
+            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licencesirene.html">
               Voir nos produits
             </a></button>
           </div>
@@ -68,7 +68,7 @@
           <div class="mask"></div>
           <div class="containerText">
             <h3>Mickey mouse</h3>
-            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licensemickey.html">
+            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licencemickey.html">
               Voir nos produits
             </a></button>
           </div>
@@ -78,7 +78,7 @@
           <div class="mask"></div>
           <div class="containerText">
             <h3>Le roi lion</h3>
-            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licenselion.html">
+            <button type="button" class="btn btn-primary btn-lg"><a href="https://carrelagepetitesirene.store/licencelion.html">
               Voir nos produits
             </a></button>
           </div>
