--- a/licencemickey.html
+++ b/licencemickey.html
@@ -32,14 +32,14 @@
       <header>
 
         <nav class="navbar navbar-expand-lg navbar-light">
-          <a class="navbar-brand" href="#">SireneTiles</a>
+          <a class="navbar-brand" href="https://carrelagepetitesirene.store/">SireneTiles</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="https://carrelagepetitesirene.store/">Accueil <span class="sr-only">(current)</span></a>
               </li>
               <li class="nav-item active">
                 <a class="nav-link" href="https://carrelagepetitesirene.store/product.html">Nos produits</a>
