--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             Voir nos produits</a></button>
           </div>
           <div class="containerImage">
-            <img src="./assets/sirene.png" alt="">
+            <img src="./assets/sirene.png" alt="Image de la petite sirène">
           </div>
         </div>
 
@@ -80,7 +80,7 @@
             Voir nos produits</a></button>
           </div>
           <div class="containerImage">
-            <img src="./assets/mickey.png" alt="">
+            <img src="./assets/mickey.png" alt="Image de Mickey">
           </div>
         </div>
 
@@ -93,7 +93,7 @@
             Voir nos produits</a></button>
           </div>
           <div class="containerImage">
-            <img src="./assets/lion.png" alt="">
+            <img src="./assets/lion.png" alt="Image du Roi Lion">
           </div>
         </div>
         
