--- a/licencelion.html
+++ b/licencelion.html
@@ -21,7 +21,7 @@
       content="Carrelagepetitesirene est une entreprise réputée nationalement pour ses carrelages motifs petite sirène complétement uniques en leur genre !"
     />
     <meta name="keywords" content="carrelage, original, petite sirène, petite, décoration, mur, salle de bain, océan, sol, meubles, intérieur, palais, carrelages, carreaux, sirène, motif, extérieur">
-    <title>SireneTiles</title>
+    <title>SireneTiles | Licence Roi Lion</title>
     <link rel="stylesheet" href="css/licence.css">
     <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300&family=Itim&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
