--- a/product.html
+++ b/product.html
@@ -25,7 +25,7 @@
       integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2"
       crossorigin="anonymous"
     />
-    <title>Produits</title>
+    <title>SireneTiles | Produits petite sirène</title>
   </head>
   <body>
     <header>
