changes search console

--- a/licencemickey.html
+++ b/licencemickey.html
@@ -96,10 +96,10 @@ Replongez vous dans la magie de la petite sirène et retrouvez Ariel, Ursula, Se
 
       <footer>
           <div class="containerSocial">
-            <ul class="socialContent">
-                <a href="https://www.facebook.com/"><li>Facebook</li></a>
-                <a href="https://www.instagram.com/mariofyl/"><li>Instagram</li></a>
-                <a href="https://www.youtube.com/"><li>Youtube</li></a>
+            <ul>
+              <li><a href="https://www.facebook.com/">Facebook</a></li>
+              <li><a href="https://www.instagram.com/">Instagram</a></li>
+              <li><a href="https://www.youtube.com/">Youtube</a></li>
             </ul>
             <span>CarrelageSirene | 2020 © Tous droits réservés</span>
           </div>
