--- a/index.html
+++ b/index.html
@@ -30,15 +30,6 @@
   </head>
   <body>
       <header>
-        <!-- <nav class="navbar">
-          <span>SireneTiles </span>
-          <ul>
-            <a href="#"><li>Produits</li></a>
-            <a href="#"><li>About</li></a>
-            <a href="#"><li>Contact</li></a>
-          </ul>
-          
-        </nav> -->
         <nav class="navbar navbar-expand-lg navbar-light">
           <a class="navbar-brand" href="https://carrelagepetitesirene.store/">SireneTiles</a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -105,9 +96,9 @@
       <footer>
           <div class="containerSocial">
             <ul class="socialContent">
-                <a href="https://www.facebook.com/"><li>Facebook</li></a>
-                <a href="https://www.instagram.com/mariofyl/"><li>Instagram</li></a>
-                <a href="https://www.youtube.com/"><li>Youtube</li></a>
+              <li><a href="https://www.facebook.com/">Facebook</a></li>
+              <li><a href="https://www.instagram.com/">Instagram</a></li>
+              <li><a href="https://www.youtube.com/">Youtube</a></li>
             </ul>
             <span>CarrelageSirene | 2020 © Tous droits réservés</span>
           </div>
